:sparkles: Adds the start code

--- a/client/vite-project/index.html
+++ b/client/vite-project/index.html
@@ -7,7 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <input type="text" id="sendMessage">
+    <button id="sendBtn">Skicka</button>
+
+    <ul id="chatList">
+
+    </ul>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
