--- a/client/vite-project/index.html
+++ b/client/vite-project/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
-    <input type="text" id="sendMessage">
-    <button id="sendBtn">Skicka</button>
+    <input type="text" id="sendMessage" class="input-field">
+    <button id="sendBtn" class="send-btn">Skicka</button>
 
     <ul id="chatList">
 
