--- a/client/vite-project/index.html
+++ b/client/vite-project/index.html
@@ -10,16 +10,25 @@
   </head>
 
   <body>
+
     
-    <div class="chat-container"> 
-      
-      <div class="chat-box">
+    <div class="join-container">
+      <input id="nameInput" class="name-input" type="text" placeholder="Vem är du?">
+      <button id="joinBtn" class="join-btn btn">Gå vidare</button>
+    </div>
+
+    <div class="chatrooms-container">
+      <ul id="chatroomsList" class="chatrooms-list"></ul>
+    </div>
+
+    <div class="chat-container">       
+      <div id="chatBox" class="chat-box">
         <ul class="chat-list" id="chatList"></ul>
       </div>
 
       <div class="send-message-container">
         <input type="text" id="sendMessage" class="input-field" placeholder="Nytt chattmeddelande">
-        <button id="sendBtn" class="send-btn">Skicka</button>
+        <button id="sendBtn" class="send-btn btn">Skicka</button>
       </div>
 
     </div>
