:art: Adds chat rooms list

--- a/client/vite-project/index.html
+++ b/client/vite-project/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="main.js"></script>
     <title>Quacky Chat</title>
-  </head> 1
+  </head> 
 
   <body>
     
@@ -29,7 +29,25 @@
     </div>
 
     <div class="chatrooms-container">
-      <ul id="chatroomsList" class="chatrooms-list"></ul>
+      <h2 class="chat-list-heading">Chattrum</h2>
+      <div id="chatroomsList" class="chatrooms-list">
+        <div class="printed-chat-room">
+          <p class="printed-chat-room-name">Exempelrum 1</p>
+          <p>0/8</p>
+        </div>
+        <div class="printed-chat-room">
+          <p class="printed-chat-room-name">Exempelrum 2</p>
+          <p>0/8</p>
+        </div>
+        <div class="printed-chat-room">
+          <p class="printed-chat-room-name">Exempelrum 3</p>
+          <p>0/8</p>
+        </div>
+        <div class="printed-chat-room">
+          <p class="printed-chat-room-name">Exempelrum 4</p>
+          <p>0/8</p>
+        </div>
+      </div>
     </div>
 
     <div class="chat-container">       
